@@ -4,9 +4,8 @@ import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 import java.io.UnsupportedEncodingException;
-import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.*;
+import java.nio.charset.StandardCharsets;
 import java.text.ParseException;
 import java.util.ArrayList;
 import org.apache.flink.util.Collector;
@@ -150,7 +149,8 @@ public class TrimEvent implements FlatMapFunction<String, String> {
     }
 
     private String uriString(String urlpath) throws UnsupportedEncodingException, MalformedURLException, URISyntaxException {
-        URI uri = new URI(urlpath);
+        URL url = new URL(URLDecoder.decode(urlpath, StandardCharsets.UTF_8.toString()));
+        URI uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(), url.getQuery(), url.getRef());
         return uri.toString();
 
     }
